--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script> 
 </head>
 <body>
-    
+<div id="react"></div>
+    <script src="src/app.js"></script> 
 </body>
 </html>
