--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>React </title>
-    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script> 
+    <title>React ES6 Gulp Template</title>
+    <!-- <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>  -->
 </head>
 <body>
 <div id="react"></div>
