--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,10 @@
     <!-- jQuery Start-->
     <!-- <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>  -->
     <!-- jQuery End-->
+
+    <!-- build:css -->
+    <link rel="stylesheet" href="style/main.css">
+    <!-- endbuild -->
 </head>
 <body>
 <div id="react"></div>
