--- a/index.html
+++ b/index.html
@@ -4,8 +4,108 @@
   <meta charset="UTF-8">
   <title>Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <!--Import Google Icon Font-->
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--Import materialize.css-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
+
 </head>
 <body>
-  
-<script type="text/javascript" src="/bundle.js"></script></body>
+  <nav class="z-depth-2 reactux-nav">
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo reactux-nav-logo">reactux</a>
+    </div>
+  </nav>
+  <div class="container">
+    <p class="flow-text">Ready-to-go template for React + Redux application</p>
+    
+    <div class="row">
+      <div class="col s6 m6">
+        <div class="card valign-wrapper">
+            <div class="col s2">
+              <img src="design/cli.png" alt="" class="reactux-card-image"> <!-- notice the "circle" class -->
+            </div>
+            <div class="col s10">
+              <span class="black-text">
+                This is a square image. Add the "circle" class to it to make it appear circular.
+              </span>
+            </div>
+        </div>
+      </div>
+
+      <div class="col s6 m6">
+        <div class="card valign-wrapper">
+            <div class="col s2">
+              <img src="design/es6.png" alt="" class="reactux-card-image"> <!-- notice the "circle" class -->
+            </div>
+            <div class="col s10">
+              <span class="black-text">
+                This is a square image. Add the "circle" class to it to make it appear circular.
+              </span>
+            </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col s6 m6">
+        <div class="card valign-wrapper">
+            <div class="col s2">
+              <img src="design/webpack.png" alt="" class="reactux-card-image"> <!-- notice the "circle" class -->
+            </div>
+            <div class="col s10">
+              <span class="black-text">
+                This is a square image. Add the "circle" class to it to make it appear circular.
+              </span>
+            </div>
+        </div>
+      </div>
+
+      <div class="col s6 m6">
+        <div class="card valign-wrapper">
+            <div class="col s2">
+              <img src="design/enzyme.png" alt="" class="reactux-card-image"> <!-- notice the "circle" class -->
+            </div>
+            <div class="col s10">
+              <span class="black-text">
+                This is a square image. Add the "circle" class to it to make it appear circular.
+              </span>
+            </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col s6 m6">
+        <div class="card valign-wrapper">
+            <div class="col s2">
+              <img src="design/react.svg" alt="" class="reactux-card-image"> <!-- notice the "circle" class -->
+            </div>
+            <div class="col s10">
+              <span class="black-text">
+                This is a square image. Add the "circle" class to it to make it appear circular.
+              </span>
+            </div>
+        </div>
+      </div>
+
+      <div class="col s6 m6">
+        <div class="card valign-wrapper">
+            <div class="col s2">
+              <img src="design/redux.png" alt="" class="reactux-card-image"> <!-- notice the "circle" class -->
+            </div>
+            <div class="col s10">
+              <span class="black-text">
+                This is a square image. Add the "circle" class to it to make it appear circular.
+              </span>
+            </div>
+        </div>
+      </div>
+    </div>
+              
+  </div>
+  <!--Import jQuery before materialize.js-->
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
+<script type="text/javascript" src="bundle.js"></script></body>
 </html>
