--- a/index.html
+++ b/index.html
@@ -21,26 +21,26 @@
     
     <div class="row">
       <div class="col s6 m6">
-        <div class="card valign-wrapper">
-            <div class="col s2">
+        <div class="card valign-wrapper reactux-card-feature">
+            <div class="col s3 valign-wrapper">
               <img src="design/cli.png" alt="" class="reactux-card-image"> <!-- notice the "circle" class -->
             </div>
-            <div class="col s10">
-              <span class="black-text">
-                This is a square image. Add the "circle" class to it to make it appear circular.
+            <div class="col s9">
+              <span class="black-text reactux-card-text">
+                CLI to generate your project
               </span>
             </div>
         </div>
       </div>
 
       <div class="col s6 m6">
-        <div class="card valign-wrapper">
-            <div class="col s2">
+        <div class="card valign-wrapper reactux-card-feature">
+            <div class="col s3 valign-wrapper">
               <img src="design/es6.png" alt="" class="reactux-card-image"> <!-- notice the "circle" class -->
             </div>
-            <div class="col s10">
-              <span class="black-text">
-                This is a square image. Add the "circle" class to it to make it appear circular.
+            <div class="col s9">
+              <span class="black-text reactux-card-text">
+                Fully support ES6 with Babel
               </span>
             </div>
         </div>
@@ -49,26 +49,26 @@
 
     <div class="row">
       <div class="col s6 m6">
-        <div class="card valign-wrapper">
-            <div class="col s2">
+        <div class="card valign-wrapper reactux-card-feature">
+            <div class="col s3 valign-wrapper">
               <img src="design/webpack.png" alt="" class="reactux-card-image"> <!-- notice the "circle" class -->
             </div>
-            <div class="col s10">
-              <span class="black-text">
-                This is a square image. Add the "circle" class to it to make it appear circular.
+            <div class="col s9">
+              <span class="black-text reactux-card-text">
+                Most popular and powerful module bundler
               </span>
             </div>
         </div>
       </div>
 
       <div class="col s6 m6">
-        <div class="card valign-wrapper">
-            <div class="col s2">
+        <div class="card valign-wrapper reactux-card-feature">
+            <div class="col s3 valign-wrapper">
               <img src="design/enzyme.png" alt="" class="reactux-card-image"> <!-- notice the "circle" class -->
             </div>
-            <div class="col s10">
-              <span class="black-text">
-                This is a square image. Add the "circle" class to it to make it appear circular.
+            <div class="col s9">
+              <span class="black-text reactux-card-text">
+                JavaScript testing utility for React from Airbnb
               </span>
             </div>
         </div>
@@ -77,31 +77,48 @@
 
     <div class="row">
       <div class="col s6 m6">
-        <div class="card valign-wrapper">
-            <div class="col s2">
+        <div class="card valign-wrapper reactux-card-feature">
+            <div class="col s3 valign-wrapper">
               <img src="design/react.svg" alt="" class="reactux-card-image"> <!-- notice the "circle" class -->
             </div>
-            <div class="col s10">
-              <span class="black-text">
-                This is a square image. Add the "circle" class to it to make it appear circular.
+            <div class="col s9">
+              <span class="black-text reactux-card-text">
+                "A JAVASCRIPT LIBRARY FOR BUILDING USER INTERFACES"
               </span>
             </div>
         </div>
       </div>
 
       <div class="col s6 m6">
-        <div class="card valign-wrapper">
-            <div class="col s2">
+        <div class="card valign-wrapper reactux-card-feature">
+            <div class="col s3 valign-wrapper">
               <img src="design/redux.png" alt="" class="reactux-card-image"> <!-- notice the "circle" class -->
             </div>
-            <div class="col s10">
-              <span class="black-text">
-                This is a square image. Add the "circle" class to it to make it appear circular.
+            <div class="col s9">
+              <span class="black-text reactux-card-text">
+                Predictable state container for React apps
               </span>
             </div>
         </div>
       </div>
     </div>
+
+    <ul class="collection with-header reactux-collection">
+      <li class="collection-header"><h5>Fully feature list</h5></li>
+      <li class="collection-item reactux-collection-item">CLI to generate your project</li>
+      <li class="collection-item reactux-collection-item">Fully ES6 support</li>
+      <li class="collection-item reactux-collection-item">Reasonable file structure for React and Redux</li>
+      <li class="collection-item reactux-collection-item">Built-in Redux dev tools and middlewares</li>
+      <li class="collection-item reactux-collection-item">Fully webpack setup for dev and production environment, including compiling JSX, eslint, different loaders, CSS module, Hot Module Reload, copying dependencies, building and deploying</li>
+      <li class="collection-item reactux-collection-item">Fully webpack setup for dev and production environment, including compiling JSX, eslint, different loaders, CSS module, Hot Module Reload, copying dependencies, building and deploying</li>
+      <li class="collection-item reactux-collection-item">Eslint with customized configuration</li>
+      <li class="collection-item reactux-collection-item">Express server with customization and configuration including auth, logger, cor</li>
+      <li class="collection-item reactux-collection-item">Components and Reducer tests Setup with ava, enzyme and sinon</li>
+      <li class="collection-item reactux-collection-item">Redux store sync with LocalStorage</li>
+      <li class="collection-item reactux-collection-item">Nested React Router Setting</li>
+      <li class="collection-item reactux-collection-item">Deploy with pm2</li>
+    </ul>
+    <a href="https://github.com/haochuan/reactux"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
               
   </div>
   <!--Import jQuery before materialize.js-->
